--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ tasks.withType(JavaCompile).configureEach {
 dependencies {
     testImplementation (
             "com.codeborne:selenide:7.0.4",
-            "org.junit.jupiter:junit-jupiter:5.10.0"
+            "org.junit.jupiter:junit-jupiter:5.10.0",
+            "com.github.javafaker:javafaker:1.0.2"
     )
 
 }
